--- a/FatGPT/menu.html
+++ b/FatGPT/menu.html
@@ -15,7 +15,12 @@
       align-items: center;
       min-height: 100vh;
     }
-
+    header, footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 10px 0;
+    }
     .container {
       background-color: #ffffff;
       padding: 30px;
@@ -78,6 +83,9 @@
 </head>
 <script src="functions.js"></script>
 <body>
+  <header>
+    <h1>FAT GPT</h1>
+</header>
   <div class="container">
     <h1>식사 추천 프로그램</h1>
 
@@ -106,5 +114,8 @@
   </div>
 
   <script src="fileUploader.js"></script>
+  <footer>
+    <p>© 2024 FAT GPT</p>
+</footer>
 </body>
 </html>
