--- a/FatGPT/index.html
+++ b/FatGPT/index.html
@@ -4,44 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FAT GPT</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-        }
-        header, footer {
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 10px 0;
-        }
-        main {
-            padding: 20px;
-            text-align: center;
-        }
-        a {
-            display: inline-block;
-            margin: 10px 0;
-            padding: 10px 20px;
-            background-color: #007BFF;
-            color: white;
-            text-decoration: none;
-            border-radius: 5px;
-        }
-        a:hover {
-            background-color: #0056b3;
-        }
-    </style>
+
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <h1>FAT GPT</h1>
     </header>
     <main>
-        <h2>환영합니다!</h2>
-        <a href="login.html">시작하기</a>
+        <h2>칼로리 계산과 식단 조합, 이제 FatGPT와 함께라면 걱정 끝!<br>
+            FatGPT는 사용자가 입력한 음식 목록과 칼로리 제한을 바탕으로, 건강하고 맛있는 최적의 식단 조합을 찾아드립니다.<br>
+            <br>
+            다이어트를 결심했지만, 매일 식단을 고민하는 분<br>
+            체중 관리와 건강한 생활을 목표로 하는 분<br>
+            <br>
+            FatGPT로 매일의 식단을 더 스마트하게 관리하고, 목표를 이룰 수 있는 한 걸음을 시작하세요.<br>
+            지금 FatGPT와 함께 더 건강한 당신의 라이프스타일을 만들어 보세요!<br>
+        </h2>
+        <a href="login.html">지금 바로 FatGPT 시작하기</a>
     </main>
     <footer>
         <p>© 2024 FAT GPT</p>
