--- a/FatGPT/index.html
+++ b/FatGPT/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>FAT GPT</h1>
+        <h1>Fat GPT</h1>
     </header>
     <main>
         <h2>칼로리 계산과 식단 조합, 이제 FatGPT와 함께라면 걱정 끝!<br>
