--- a/FatGPT/login.html
+++ b/FatGPT/login.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>FAT GPT</h1>
+        <h1>Fat GPT</h1>
     </header>
 
     <div class="container">
@@ -30,7 +30,7 @@
 
             if (user) {
                 alert('로그인 성공!');
-                location.href = 'info.html';
+                location.href = 'bmi.html';
             } else {
                 alert('아이디 또는 비밀번호가 올바르지 않습니다.');
             }
