--- a/FatGPT/menu.html
+++ b/FatGPT/menu.html
@@ -4,38 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>식사 추천</title>
+
+  <link rel="stylesheet" href="style.css">
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f9f9f9;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-    }
-    header, footer {
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 10px 0;
-    }
-    .container {
-      background-color: #ffffff;
-      padding: 30px;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-      width: 90%;
-      max-width: 400px;
-      text-align: center;
-    }
-
-    h1 {
-      margin-bottom: 20px;
-      color: #333;
-    }
-
     label {
       display: block;
       font-size: 14px;
@@ -84,7 +55,7 @@
 <script src="functions.js"></script>
 <body>
   <header>
-    <h1>FAT GPT</h1>
+    <h1>Fat GPT</h1>
 </header>
   <div class="container">
     <h1>식사 추천 프로그램</h1>
