스크롤 시 header footer 안 보이게

--- a/FatGPT/bmi.html
+++ b/FatGPT/bmi.html
@@ -6,6 +6,7 @@
     <title>식단 추천</title>
 
     <link rel="stylesheet" href="style.css">
+    <script src="scroll.js"></script>
     <script src="functions.js"></script>
 
     <style>
