--- a/FatGPT/index.html
+++ b/FatGPT/index.html
@@ -6,6 +6,7 @@
     <title>FAT GPT</title>
 
     <link rel="stylesheet" href="style.css">
+    <script src="scroll.js"></script>
 </head>
 <body>
     <header>
