--- a/FatGPT/login.html
+++ b/FatGPT/login.html
@@ -6,6 +6,7 @@
     <title>로그인</title>
     
     <link rel="stylesheet" href="style.css">
+    <script src="scroll.js"></script>
 </head>
 <body>
     <header>
