--- a/FatGPT/menu.html
+++ b/FatGPT/menu.html
@@ -6,6 +6,8 @@
   <title>식사 추천</title>
 
   <link rel="stylesheet" href="style.css">
+  <script src="scroll.js"></script>
+  
   <style>
     label {
       display: block;
