--- a/FatGPT/join.html
+++ b/FatGPT/join.html
@@ -6,6 +6,7 @@
     <title>회원가입</title>
 
     <link rel="stylesheet" href="style.css">
+    <script src="scroll.js"></script>
 </head>
 <body>
     <header>
