--- a/FatGPT/bmi.html
+++ b/FatGPT/bmi.html
@@ -6,7 +6,6 @@
     <title>식단 추천</title>
 
     <link rel="stylesheet" href="style.css">
-    <script src="scroll.js"></script>
     <script src="functions.js"></script>
 
     <style>
@@ -111,6 +110,17 @@
     </style>
 </head>
 <body>
+    <!-- 사이드바 -->
+    <div class="sidebar">
+        <h2>Sidebar Menu</h2>
+        <ul>
+            <li><a href="bmi.html">BMI 검사</a></li>
+            <li><a href="menu.html">식단 추천</a></li>
+            <li><a href="add.html">음식 추가</a></li>
+            <li><a href="login.html">로그아웃</a></li>
+        </ul>
+    </div>
+    
     <header>
         <h1>Fat GPT</h1>
     </header>
@@ -168,7 +178,14 @@
         });
     </script>
     <footer>
-        <p>© 2024 FAT GPT</p>
+        <a href="#">회사소개</a> | 
+        <a href="#">인재채용</a> | 
+        <a href="#">제휴제안</a> | 
+        <a href="#">이용약관</a> | 
+        <a href="#">개인정보처리방침</a> | 
+        <a href="#">Fat GPT 정책</a> | 
+        <a href="#">고객센터</a> | 
+        <a href="#">ⓒ2024 Fat GPT</a>
     </footer>
 </body>
 </html>
