--- a/FatGPT/index.html
+++ b/FatGPT/index.html
@@ -6,14 +6,27 @@
     <title>FAT GPT</title>
 
     <link rel="stylesheet" href="style.css">
-    <script src="scroll.js"></script>
 </head>
 <body>
+    <!-- 사이드바 -->
+    <div class="sidebar">
+        <h2>Sidebar Menu</h2>
+        <ul>
+            <li><a href="bmi.html">BMI 검사</a></li>
+            <li><a href="menu.html">식단 추천</a></li>
+            <li><a href="add.html">음식 추가</a></li>
+            <li><a href="login.html">로그아웃</a></li>
+        </ul>
+    </div>
+
     <header>
         <h1>Fat GPT</h1>
     </header>
     <main>
-        <h2>칼로리 계산과 식단 조합, 이제 FatGPT와 함께라면 걱정 끝!<br>
+        <div class="content">
+            <p>이 페이지는 Fat GPT와 관련된 정보를 담고 있습니다.</p>
+            <p>...</p>
+            칼로리 계산과 식단 조합, 이제 FatGPT와 함께라면 걱정 끝!<br>
             FatGPT는 사용자가 입력한 음식 목록과 칼로리 제한을 바탕으로, 건강하고 맛있는 최적의 식단 조합을 찾아드립니다.<br>
             <br>
             다이어트를 결심했지만, 매일 식단을 고민하는 분<br>
@@ -21,11 +34,21 @@
             <br>
             FatGPT로 매일의 식단을 더 스마트하게 관리하고, 목표를 이룰 수 있는 한 걸음을 시작하세요.<br>
             지금 FatGPT와 함께 더 건강한 당신의 라이프스타일을 만들어 보세요!<br>
-        </h2>
-        <a href="login.html">지금 바로 FatGPT 시작하기</a>
+            <p>스크롤을 내려 footer를 확인하세요.</p>
+
+            <a href="login.html">지금 바로 FatGPT 시작하기</a>
+        </div>
+        
     </main>
     <footer>
-        <p>© 2024 FAT GPT</p>
+        <a href="#">회사소개</a> | 
+        <a href="#">인재채용</a> | 
+        <a href="#">제휴제안</a> | 
+        <a href="#">이용약관</a> | 
+        <a href="#">개인정보처리방침</a> | 
+        <a href="#">Fat GPT 정책</a> | 
+        <a href="#">고객센터</a> | 
+        <a href="#">ⓒ2024 Fat GPT</a>
     </footer>
 </body>
 </html>
