--- a/FatGPT/menu.html
+++ b/FatGPT/menu.html
@@ -55,6 +55,17 @@
 </head>
 <script src="functions.js"></script>
 <body>
+  <!-- 사이드바 -->
+  <div class="sidebar">
+    <h2>Sidebar Menu</h2>
+    <ul>
+        <li><a href="bmi.html">BMI 검사</a></li>
+        <li><a href="menu.html">식단 추천</a></li>
+        <li><a href="add.html">음식 추가</a></li>
+        <li><a href="login.html">로그아웃</a></li>
+    </ul>
+  </div>
+  
   <header>
     <h1>Fat GPT</h1>
   </header>
